# janus-camera-stack

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  back-channel-topics.json.example  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  install.sh  lock-deps.sh  main.py  pytest.ini  realsense_mux.py  requirements-dev.txt  requirements.txt  ruff.toml  setup_depth_camera_network.sh  textroom_relay.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
app/: __init__.py
camera_bringup/: .gitignore  .pre-commit-config.yaml  CONTRACT.md  README.md  SBOM.json  SBOM.txt  __init__.py  __main__.py  api.py  check.py  cli.py  conftest.py  fixer.py  hw_reset_realsense.py  instance.py  logger.py  metrics.py  ports.py  pyproject.toml  realsense_query.py  requirements-hardware.txt  requirements.txt  safe_mode.py  signing.py  spec.py
camera_bringup/checks/: __init__.py  c01_usb_enumerate.py  c02_usb_power.py  c03_uvcvideo.py  c04_udev.py  c05_dev_symlinks.py  c06_v4l2.py  c07_firmware.py  c08_bandwidth.py  c09_reset_tools.py  c10_smoke.py  c11_fingerprint.py
camera_bringup/docs/adr/: 0001-per-instance-pattern.md  0002-dedicated-l0-venv.md  0003-udev-rule-generated-from-instance.md  0004-fingerprint-baseline-auto-accept.md  0005-flock-not-advisory-locking.md  0006-ports-adapters-incremental.md
camera_bringup/fixers/: __init__.py  f02_usb_power.py  f04_udev.py  f09_reset_tools.py  f11_fingerprint.py
camera_bringup/fixtures/: 99-cam-rgb.rules  uvcvideo.conf
camera_bringup/instances/: cam-rgb.toml
camera_bringup/scripts/: audit_deps.sh  generate_sbom.sh  lint.sh
camera_bringup/tests/: conftest.py
camera_bringup/tests/fitness/: test_contract_conformance.py  test_idempotency.py  test_instance_consistency.py  test_no_side_effects.py
camera_bringup/tests/integration/: test_api_e2e.py  test_cli.py  test_l0_consumer_api.py
camera_bringup/tests/unit/: test_api_derive_status.py  test_apply_lock.py  test_benchmarks.py  test_c01_usb_enumerate.py  test_c02_usb_power.py  test_c04_udev_check.py  test_c05_dev_symlinks_check.py  test_c06_v4l2_check.py  test_c08_bandwidth_check.py  test_c10_smoke_check.py  test_check_framework.py  test_env_override.py  test_f09_reset_tools.py  test_fingerprint_compare.py  test_parsers.py  test_ports.py  test_property_based.py  test_safe_mode.py  test_signing.py  test_status_cache.py
design_system/: SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  readme.md
docs/: ADAPTERS.md  ARCHITECTURE.md  ARCHITECTURE_CURRENT.md  BACKLOG.md  CONTRACT.md  DEPLOYMENT.md  DEPLOYMENT_CLOUD.md  DEPLOY_COLOR_FRAME.md  DEPTH_CAMERA_DEPLOY.md  DEPTH_SEMANTIC_CONTRACT.md  HANDOFF.md  INSTALL.md  KNOWN_LIMITATIONS.md  LEGACY_COMPATIBILITY.md  NODE_CONTRACT.md  OPERATOR_RUNBOOK.md  README.md  RESILIENCE_TESTING.md  SLO.md  STATE_BASELINE_2026-06-20_AFTER_RECONCILE.md  TESTING.md  TUTORIAL_USB_WEBCAM.md
e2e/: Dockerfile  README.md  package.json  playwright.config.ts
host_infra/: .gitignore  CONTRACT.md  Makefile  README.md  ansible.cfg  camera-fleet.toml.example  secrets.yml.example  site.yml
infrastructure/: prometheus-dev.yml  secrets.env.example
installer/: build-pyrealsense.sh  probe.sh
marscam_camera_webrtc_docs/: deep-research-report.md
monitoring/: camstack-alert-rules.yml  grafana-dashboard.json  prometheus.yml
scripts/: build_console.sh  build_release_archive.sh  fetch-janus-js.sh  release_excludes.txt  soak_20260616_1444.csv  soak_capture.sh
templates/: admin_config.html  camera_config.html  camera_hosts.html  color_view.html  console.html  depth_features.js  depth_view.html  devices_dashboard.html  gamepad_config.json  janus.js  (+5 more)
(+575 files in other folders)
